objects/TILBP__TI_Content_Action__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__SFContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Content Actions</relationshipLabel>
        <relationshipName>TI_Content_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__SFContent__c</fullName>
        <label>TI Content</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Content Actions</relationshipLabel>
        <relationshipName>TI_Content_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TIID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <label>TI ID (DEPRECATED)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TI Content Action</label>
    <listViews>
        <fullName>TILBP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TICA-{0000000}</displayFormat>
        <label>TI Content Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Content Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>